---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1000                                 -
---------------------------------------------
- 2020-04-26                                -
---------------------------------------------
.: WSM: Task: Smaller error font size (WSM-19)

---------------------------------------------
- 2020-04-25                                -
---------------------------------------------
.: WSM: Story: Shop Settings Module (WSM-23)
.: WSM: Story: Currency Module (WSM-34)
.: WSM: Task: Change Icon (WSM-17)

---------------------------------------------
- 2020-04-24                                -
---------------------------------------------
.: WSM: Story: Item Module (WSM-29)
.: WSM: Story: Information Module (WSM-21)

---------------------------------------------
- 2020-04-16                                -
---------------------------------------------
.: WSM: Story: Catalogue Module (WSM-5)

---------------------------------------------
- 2020-04-12                                -
---------------------------------------------
.: WSM: Task: Forget Password (WSM-3)
.: WSM: Story: Shop Module (WSM-24)

---------------------------------------------
- 2020-04-11                                -
---------------------------------------------
.: WSM: Task: Get template from existing code (WSM-14)
.: WSM: Task: Registration (WSM-2)
.: WSM: Task: Login (WSM-2)
.: WSM: Task: Activate account after registration (WSM-16)