@@ -5,12 +5,7 @@
         <div class="modal-content" *ngIf="loading.isRunning(); else successContent">
           <h3 class="font-weight-bold">Activation</h3>
           <div class="text-center mt-4 mb-4">
-            <span class="center" style="animation: rotate 8s infinite linear; 
-              border-radius: 50%;
-              width: 100px;
-              height:100px;
-              display: block;
-              border-top: 10px solid #990000;"></span>
+            <ws-spinner [width]="60" [height]="60" [spinnerColor]="'#990000'"></ws-spinner>
           </div>
           <p class=" text-center mb-3" style="font-size: 1.2rem">Activating...</p>
         </div>
@@ -25,12 +20,12 @@
       <div class="text-center mt-5 mb-4">
         <span class="far fa-check-circle" style="font-size: 7rem; color:#68DC64"></span>
       </div>
-      <p class="text-center mb-5">Activate successfully!<br/>
-        You can login now!
-      </p>
-      <a href="javascript:void(0)" style="color: #000; font-size: 1.1rem; font-weight: 400"
+      <p class="text-center mb-0">Activate successfully!</p>
+      <p class="text-center mb-0 text-muted">Redirecting...</p>
+      <p class="text-center mb-4 text-muted">Manage your shop now!</p>
+      <!-- <a href="javascript:void(0)" style="color: #000; font-size: 1.1rem; font-weight: 400"
         [routerLink]="['',{ outlets: { modal: 'login' } }]"><span class="fas fa-chevron-left mr-2"></span>Back to
-        login</a>
+        login</a> -->
     </div>
   </ng-container>
 </ng-template>
